# FantasV3

./: .gitignore  DEPENDENCIES.md  README.md  README.rst  dev.py  pyproject.toml  requirements.txt
.github/workflows/: build-fantas.yml  dev-check.yml  publish-pypi.yml  release-gh-draft.yml  sync-docs.yml
docs/source/: conf.py  index.rst  thanks.rst
docs/source/_static/: qa_style.css
docs/source/ref/code_examples/: quick_start.py  quick_start_animation.py
docs/source/ref/dev_help/: dev.py.rst
docs/source/ref/modules/: color.rst  constants.rst  curve.rst  debug.rst  event_handler.rst  fantas.rst  fantas_typing.rst
docs/source/ref/others/: pygame-ce-for-fantas.rst  q_and_a.rst  thanks.rst
docs/source/ref/tutorials/: animation.rst  color.rst  rect.rst
fantas/: __init__.py  color.py  constants.py  curve.py  debug.py  debug_window.py  event_handler.py  fantas_typing.py  font.py  framefunc.py  layout.py  misc.py  nodebase.py  renderer.py  resource.py  style.py  udp.py  ui.py  version.py  window.py
fantas/_vendor/: __init__.py
fantas/base/: __init__.py  constants.py  event_handler.py  fantas_typing.py  framefunc.py  misc.py  nodebase.py  renderer.py  style.py  ui.py  window.py
fantas/ext/: __init__.py  font.py  keyframe.py  renderer.py  trigger.py  ui.py
fantas/utils/: __init__.py  color.py  curve.py  debug.py  debug_window.py  font.py  misc.py  resource.py
tests/: __init__.py  test_color.py  test_constants.py  test_curve.py
tools/: check_pygame_ce_fantas.py  cmd.py  get_version.py  github_downloader.py  install_poetry.py  install_pygame.py  install_typer.py  pprint.py  whl_helper.py
