[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fantas"
version = "3.0.0"
description = "A 2D graphics program framework based on pygame-ce"
authors = ["Fantastair <Fantastair@qq.com>"]
readme = "README.md"
packages = [{include = "fantas"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.18.1"
pylint = "^4.0.4"
sphinx = "^9.1.0"
furo = "^2025.12.19"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | tmp
  | tools
  | build
  | docs
  | pygame-ce-fantas
)/
'''

[tool.mypy]
strict = true
exclude = [
    "^\\.venv",
    "^\\.git",
    "^tmp/",
    "^tools/",
    "^pygame-ce-fantas/",
    "^docs/"
]

[tool.pylint.main]
jobs = 8
extension-pkg-whitelist = ["pygame"]

[tool.pylint.messages_control]
disable = [
    "R0401", "R0902", "R0903", "R0912", "R0913", "R0914", "R0917",
    "C0301", "C0302", "C0413",
    "W0123", "W0401",
    "E1136",
]

[tool.pylint.reports]
fail-under = 9.5

