[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fantas"
version = "3.0.0.dev1"
description = "A 2D graphics program framework based on pygame-ce"
authors = ["Fantastair <Fantastair@qq.com>"]
readme = "README.rst"
packages = [
    {include = "fantas"},
]
include = [
    {path = "fantas/_vendor/pygame/**/*", format = "wheel"},
]
license = "MIT"
repository = "https://github.com/Fantastair/FantasV3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Assembly",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Software Development :: Libraries :: fantas",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Linux",
    "Operating System :: MacOS",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
typer = "^0.24.1"
black = "^24.8.0"
mypy = "^1.18.1"
pylint = "^4.0.4"
sphinx = "^9.1.0"
furo = "^2025.12.19"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.urls]
Homepage = "https://fantastair.cn"
Documentation = "https://fantastair.cn"
AuthorPage = "https://fantastair.cn"
GitHub = "https://github.com/Fantastair/FantasV3"
issue = "https://github.com/Fantastair/FantasV3/issues"

[tool.black]
line-length = 88

[tool.mypy]
strict = true
files = [
    "fantas",
]
exclude = [
    "fantas/_vendor",
]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "fantas._vendor.*"
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.pylint.main]
jobs = 8
extension-pkg-allow-list = "fantas._vendor.pygame"
ignore = "pygame"

[tool.pylint.messages_control]
disable = [
    "R0401", "R0902", "R0903", "R0912", "R0913", "R0914", "R0917",
    "C0301", "C0302", "C0413",
    "W0123", "W0401",
    "E1136",
]

[tool.pylint.reports]
fail-under = 9.5

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pygame.metadata]
version = "2.5.7.dev1"

[tool.cibuildwheel]
build-frontend = "build"
build = "cp3{12,13,14}-*"

before-build = "python dev.py prep-all"
test-command = "python dev.py test"

[tool.cibuildwheel.macos]
repair-wheel-command = [
    "wheel tags --platform-tag {delocate_arch} --remove {wheel}",
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.config-settings]
setup-args = [
    "-Derror_on_warns=true",
    "-Dvsenv=true",
    "-Derror_docs_missing=true",
]

[[tool.cibuildwheel.overrides]]
select = "{*-manylinux_i686,pp*-*{arm64,aarch64},pp311-manylinux_x86_64,cp314-manylinux_*}"
test-requires = []
